--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
            <button>Instagram</button>
          </div>
       </div>
+       <!-- Kartička uživatele -->
       <div>
         <!-- Dostupnost a cena -->
         <div>
