--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
         <!-- Obrázek uživatele -->
          <div>
-           <img src="avatar.jpg" alt="User Avatar">
+           <img src="./images/avatar.jpg" alt="User Avatar">
          </div>
          <!-- Informace o uživateli -->
          <div>
@@ -49,7 +49,7 @@
         </div>
         <!-- Obrázek uživatele -->
          <div>
-           <img src="avatar2.jpg" alt="User Avatar">
+           <img src="./images/avatar2.jpg" alt="User Avatar">
          </div>
          <!-- Informace o uživateli -->
          <div>
